crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_references__coffee_definitions.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "col": 4,
    "line": 17,
    "uri": "<PATH>"
  },
  "response": [
    {
      "col_end": 26,
      "col_start": 4,
      "is_def": true,
      "line_end": 17,
      "line_start": 17,
      "uri": "<PATH>"
    }
  ]
}
